# OmniSplice

./: .gitignore  Cargo.toml  LICENSE  README.md  compare_all_group.py  compare_condition_wrapper.py  compare_conditions.py  compare_two_groups.py  compare_two_groups_wrapper.py  gene_visualisation.py  merge_technical.py  splicing_efficiency.py
common_python/: counter_junction.py  junction_class.py  tester.py
src/: backsplicing.rs  compare_conditions.rs  main.rs  splicing_efficiency.rs
src/common/: error.rs  gtf_.rs  it_approches.rs  it_intron.rs  junction_file.rs  mod.rs  point.rs  read_record.rs  utils.rs
src/stat_common/: common.rs  errors.rs  glm_logistic.rs  mod.rs
