[package]
name = "omni_splice"
version = "0.3.0"
edition = "2024"
authors = ["Romain JSB Lannes", "rlannes@wi.mit.edu"]

[dependencies]
bio = "1"
rust-htslib = { version = "0.45.0"}
CigarParser = { git = "https://github.com/rLannes/CigarParser" }
clap = { version = "4.5.16", features = ["derive"] }
strand_specifier = { git = "https://github.com/rLannes/BAMstrandSpecifier" }
regex = "*"
lazy_static = "1.5.0"
itertools = "*"
log = "0.4"
flexi_logger = { version = "0.31", features = ["async", "specfile"] }
thiserror = "2"



[[bin]]
name = "omni_splice"
path = "src/main.rs"

[[bin]]
name = "backsplicing"
path = "src/backsplicing.rs"

[[bin]]
name = "splicing_efficiency"
path = "src/splicing_efficiency.rs"

